--- a/packages/core/src/components/logo/logo.scss
+++ b/packages/core/src/components/logo/logo.scss
@@ -104,6 +104,7 @@
       overflow-wrap: normal;
       line-height: 1;
       font-size: 1rem;
+      max-inline-size: 50vw;
     }
   }
 }
